# consent-signaling-client

./: .bazelrc  .editorconfig  .gitignore  MODULE.bazel  README.md  WORKSPACE
.github/workflows/: build-test.yml  lint.yml
src/main/kotlin/org/wfanet/consentsignal/keystore/: Key.kt  Keystore.kt
src/main/kotlin/org/wfanet/consentsignaling/client/: BUILD.bazel  ClientProviders.kt
src/main/kotlin/org/wfanet/consentsignaling/client/duchy/: DuchyClient.kt
src/main/kotlin/org/wfanet/consentsignaling/common/: BUILD.bazel  HashUtils.kt
src/main/kotlin/org/wfanet/consentsignaling/crypto/: BUILD.bazel  Crypto.kt  HybridCryptor.kt  NoCrypto.kt  NoHybridCryptor.kt  PrivateKeyHandle.kt  TinkCrypto.kt  TinkHybridCryptor.kt
src/main/kotlin/org/wfanet/consentsignaling/crypto/hash/: BUILD.bazel  HashUtils.kt
src/main/kotlin/org/wfanet/consentsignaling/crypto/hybridencryption/: BUILD.bazel  ECIESCryptor.kt  EciesCryptor.kt  FakeHybridCryptor.kt  HybridCryptor.kt
src/main/kotlin/org/wfanet/consentsignaling/crypto/hybridencryption/testing/: AbstractHybridCryptorTest.kt  BUILD.bazel
src/main/kotlin/org/wfanet/consentsignaling/crypto/keys/: BUILD.bazel  InMemoryKeyStore.kt  KeyStore.kt  PrivateKeyHandle.kt
src/main/kotlin/org/wfanet/consentsignaling/crypto/keys/testing/: AbstractKeyStoreTest.kt  BUILD.bazel
src/main/kotlin/org/wfanet/consentsignaling/crypto/keystore/: InMemoryKeyStore.kt  KeyStore.kt
src/main/kotlin/org/wfanet/consentsignaling/crypto/signage/: BUILD.bazel  FakeSigner.kt  JavaSecuritySignage.kt  JavaSecuritySigner.kt  NoSignage.kt  Signage.kt  Signer.kt
src/main/kotlin/org/wfanet/consentsignaling/crypto/signage/testing/: AbstractSignerTest.kt  BUILD.bazel
src/main/kotlin/org/wfanet/measurement/consent/: BUILD.bazel
src/main/kotlin/org/wfanet/measurement/consent/client/: BUILD.bazel
src/main/kotlin/org/wfanet/measurement/consent/client/common/: BUILD.bazel  KeyHandles.kt  Signing.kt  VerificationException.kt  VerifySignedData.kt
src/main/kotlin/org/wfanet/measurement/consent/client/dataprovider/: BUILD.bazel  DataProviderClient.kt
src/main/kotlin/org/wfanet/measurement/consent/client/duchy/: BUILD.bazel  DuchyClient.kt
src/main/kotlin/org/wfanet/measurement/consent/client/kingdom/: BUILD.bazel  KingdomClient.kt
src/main/kotlin/org/wfanet/measurement/consent/client/measurementconsumer/: BUILD.bazel  MeasurementConsumerClient.kt
src/main/kotlin/org/wfanet/measurement/consent/client/storage/: BUILD.bazel  Storage.kt
src/main/kotlin/org/wfanet/measurement/consent/crypto/: Aead.kt  AeadStore.kt  BUILD.bazel  Hashing.kt  Signatures.kt  TinkAead.kt  TinkDerKeysetReader.kt  Utils.kt
src/main/kotlin/org/wfanet/measurement/consent/crypto/exception/: BUILD.bazel  DataFailsSignatureValidation.kt  InvalidSignatureException.kt
src/main/kotlin/org/wfanet/measurement/consent/crypto/hybridencryption/: BUILD.bazel  EciesCryptor.kt  FakeHybridCryptor.kt  HybridCryptor.kt  HybridEncryptionMapper.kt  HybridEncryptionMapperForKemDem.kt
src/main/kotlin/org/wfanet/measurement/consent/crypto/hybridencryption/testing/: AbstractHybridCryptorTest.kt  BUILD.bazel  FakeHybridCryptor.kt  ReversingHybridCryptor.kt
src/main/kotlin/org/wfanet/measurement/consent/crypto/keys/: BUILD.bazel  InMemoryKeyStore.kt  KeyStore.kt  PrivateKeyHandle.kt  PrivateKeyManager.kt  PublicKeyHandle.kt  TinkPrivateKeyHandle.kt  TinkPrivateKeyManager.kt  TinkPublicKeyHandle.kt
src/main/kotlin/org/wfanet/measurement/consent/crypto/keys/testing/: AbstractKeyStoreTest.kt  BUILD.bazel
src/main/kotlin/org/wfanet/measurement/consent/crypto/keystore/: AeadPrivateKeyStore.kt  BUILD.bazel  KeyStore.kt  PrivateKeyHandle.kt  PrivateKeyStore.kt  PublicKeyHandle.kt  TinkPrivateKeyHandle.kt  TinkPublicKeyHandle.kt
src/main/kotlin/org/wfanet/measurement/consent/crypto/keystore/testing/: AbstractKeyStoreTest.kt  BUILD.bazel  InMemoryKeyStore.kt  TinkDerKeysetReader.kt
src/main/kotlin/org/wfanet/measurement/consent/crypto/testing/: BUILD.bazel  FakeUtils.kt
src/main/kotlin/org/wfanet/measurement/consent/testing/: AbstractExchangeStepSignaturesTest.kt  BUILD.bazel  CertificateTesting.kt  X509Testing.kt
src/main/proto/wfa/measurement/api/v2alpha/: BUILD.bazel
src/test/kotlin/org/wfanet/consentsignaling/client/: BUILD.bazel  KingdomTest.kt  MeasurementConsumerTest.kt
src/test/kotlin/org/wfanet/consentsignaling/client/duchy/: BUILD.bazel  DuchyClientTest.kt
src/test/kotlin/org/wfanet/consentsignaling/crypto/hybridencryption/: BUILD.bazel  FakeHybridCryptorTest.kt
src/test/kotlin/org/wfanet/consentsignaling/crypto/signage/: BUILD.bazel  FakeSignerTest.kt
src/test/kotlin/org/wfanet/measurement/consent/client/: BUILD.bazel  DuchyClientTest.kt
src/test/kotlin/org/wfanet/measurement/consent/client/dataprovider/: BUILD.bazel  DataProviderClientTest.kt
src/test/kotlin/org/wfanet/measurement/consent/client/duchy/: BUILD.bazel  DuchyClientTest.kt
src/test/kotlin/org/wfanet/measurement/consent/client/kingdom/: BUILD.bazel  KingdomClientTest.kt
src/test/kotlin/org/wfanet/measurement/consent/client/measurementconsumer/: BUILD.bazel  MeasurementConsumerClientTest.kt
src/test/kotlin/org/wfanet/measurement/consent/crypto/: BUILD.bazel  HashingTest.kt  SignaturesTest.kt  UtilsTest.kt
src/test/kotlin/org/wfanet/measurement/consent/crypto/hybridencryption/: BUILD.bazel  EciesCryptorTest.kt  FakeHybridCryptorTest.kt  HybridEncryptionMapperForKemDemTest.kt  ReversingHybridCryptorTest.kt
src/test/kotlin/org/wfanet/measurement/consent/crypto/keys/: BUILD.bazel  InMemoryKeyStoreTest.kt  PrivateKeyManagerTest.kt
src/test/kotlin/org/wfanet/measurement/consent/crypto/keystore/: BUILD.bazel  InMemoryKeyStoreTest.kt
src/test/kotlin/org/wfanet/measurement/consent/crypto/testing/: BUILD.bazel  FakeUtilsTest.kt
src/test/kotlin/org/wfanet/measurement/consent/dataprovider/: BUILD.bazel  DataProviderExchangeStepSignaturesTest.kt
src/test/kotlin/org/wfanet/measurement/consent/measurementconsumer/: BUILD.bazel  MeasurementConsumerExchangeStepSignaturesTest.kt
(+2 files in other folders)
