module(
    name = "consent-signaling-client",
)

# WFA registry deps.
bazel_dep(
    name = "rules_kotlin_jvm",
    version = "0.2.0",
    repo_name = "wfa_rules_kotlin_jvm",
)
bazel_dep(
    name = "cross-media-measurement-api",
    version = "0.62.0",
    repo_name = "wfa_measurement_proto",
)
bazel_dep(
    name = "common-jvm",
    version = "0.82.1",
    repo_name = "wfa_common_jvm",
)
