module(
    name = "consent-signaling-client",
)

# WFA registry deps.
bazel_dep(
    name = "rules_kotlin_jvm",
    version = "0.10.0",
    repo_name = "wfa_rules_kotlin_jvm",
)
bazel_dep(
    name = "cross-media-measurement-api",
    version = "0.87.0",
    repo_name = "wfa_measurement_proto",
)
bazel_dep(
    name = "common-jvm",
    version = "0.129.0",
    repo_name = "wfa_common_jvm",
)

# Bazel Central Registry deps.
bazel_dep(
    name = "rules_jvm_external",
    version = "6.8",
)

# TODO(bazel-contrib/rules_jvm_external/issues#1496): Remove when fixed
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    known_contributing_modules = [
        "bazel_worker_java",
        "rules_kotlin_jvm",
        "common-jvm",
        "consent-signaling-client",
    ],
)
