load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_library")
load("@wfa_measurement_system//build:defs.bzl", "test_target")

package(default_visibility = [
    test_target(":__subpackages__"),
])

kt_jvm_library(
    name = "client",
    srcs = glob(["**/*.kt"]),
    deps = [
        "//src/main/kotlin/org/wfanet/consentsignaling/crypto/hash",
        "//src/main/kotlin/org/wfanet/consentsignaling/crypto/hybridencryption:hybrid_encryption",
        "//src/main/kotlin/org/wfanet/consentsignaling/crypto/signage",
        "//src/main/proto/wfa/measurement/api/v2alpha:certificate_java_proto",
        "//src/main/proto/wfa/measurement/api/v2alpha:crypto_java_proto",
        "//src/main/proto/wfa/measurement/api/v2alpha:measurement_java_proto",
        "@wfa_common_jvm//imports/java/org/conscrypt",
        "@wfa_measurement_system//src/main/proto/wfa/measurement/system/v1alpha:computation_java_proto",
        "@wfa_measurement_system//src/main/proto/wfa/measurement/system/v1alpha:requisition_java_proto",
    ],
)
