load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_library")

package(default_visibility = ["//visibility:public"])

kt_jvm_library(
    name = "client",
    srcs = glob(["**/*.kt"]),
    deps = [
        "//src/main/kotlin/org/wfanet/consentsignaling/crypto/hash",
        "//src/main/kotlin/org/wfanet/consentsignaling/crypto/hybridencryption",
        "//src/main/kotlin/org/wfanet/consentsignaling/crypto/signage",
        "//src/main/proto/wfa/measurement/api/v2alpha:certificate_java_proto",
        "//src/main/proto/wfa/measurement/api/v2alpha:crypto_java_proto",
        "//src/main/proto/wfa/measurement/api/v2alpha:measurement_java_proto",
        "@wfa_common_jvm//imports/java/org/conscrypt",
        "@wfa_measurement_system//src/main/proto/wfa/measurement/system/v1alpha:computation_java_proto",
        "@wfa_measurement_system//src/main/proto/wfa/measurement/system/v1alpha:requisition_java_proto",
    ],
)
