load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_library")

package(default_visibility = [
    "//src/main/kotlin/org/wfanet/consentsignaling:__subpackages__",
    "//src/test/kotlin/org/wfanet/consentsignaling:__subpackages__",
])

kt_jvm_library(
    name = "common",
    srcs = glob(["*.kt"]),
    deps = ["@wfa_measurement_system//imports/java/com/google/protobuf"],
)
