load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_library")
load("@wfa_measurement_system//build:defs.bzl", "test_target")

package(default_visibility = [
    "//src/main/kotlin/org/wfanet/consentsignaling:__subpackages__",
    "//src/test/kotlin/org/wfanet/consentsignaling:__subpackages__",
])

kt_jvm_library(
    name = "crypto",
    srcs = glob(["**/*.kt"]),
    deps = [
        "//imports/java/com/google/crypto/tink",
        "//src/main/proto/wfa/measurement/api/v2alpha:crypto_java_proto",
        "//src/main/proto/wfa/measurement/api/v2alpha:certificate_java_proto",
    ],
)
