load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_proto_library")

package(default_visibility = ["//visibility:public"])

kt_jvm_proto_library(
    name = "certificate_kt_jvm_proto",
    deps = ["@wfa_measurement_proto//src/main/proto/wfa/measurement/api/v2alpha:certificate_proto"],
)

kt_jvm_proto_library(
    name = "crypto_kt_jvm_proto",
    deps = ["@wfa_measurement_proto//src/main/proto/wfa/measurement/api/v2alpha:crypto_proto"],
)

kt_jvm_proto_library(
    name = "random_seed_kt_jvm_proto",
    deps = ["@wfa_measurement_proto//src/main/proto/wfa/measurement/api/v2alpha:random_seed_proto"],
)

kt_jvm_proto_library(
    name = "requisition_spec_kt_jvm_proto",
    deps = ["@wfa_measurement_proto//src/main/proto/wfa/measurement/api/v2alpha:requisition_spec_proto"],
)

kt_jvm_proto_library(
    name = "requisition_kt_jvm_proto",
    deps = ["@wfa_measurement_proto//src/main/proto/wfa/measurement/api/v2alpha:requisition_proto"],
)

kt_jvm_proto_library(
    name = "measurement_spec_kt_jvm_proto",
    deps = ["@wfa_measurement_proto//src/main/proto/wfa/measurement/api/v2alpha:measurement_spec_proto"],
)

kt_jvm_proto_library(
    name = "measurement_kt_jvm_proto",
    deps = ["@wfa_measurement_proto//src/main/proto/wfa/measurement/api/v2alpha:measurement_proto"],
)

kt_jvm_proto_library(
    name = "event_group_kt_jvm_proto",
    deps = [
        "@wfa_measurement_proto//src/main/proto/wfa/measurement/api/v2alpha:event_group_proto",
    ],
)
