load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_test")

kt_jvm_test(
    name = "MeasurementConsumerTest",
    srcs = ["MeasurementConsumerTest.kt"],
    test_class = "org.wfanet.consentsignaling.client.MeasurementConsumerTest",
    deps = [
        # "//src/main/kotlin/org/wfanet/consentsignaling/client",
        "@wfa_measurement_system//imports/java/com/google/common/truth",
        "@wfa_measurement_system//imports/java/com/google/common/truth/extensions/proto",
        "@wfa_measurement_system//imports/java/org/junit",
        "@wfa_measurement_system//imports/kotlin/com/nhaarman/mockitokotlin2",
    ],
)