load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_library")

package(default_visibility = [
    "//src/main/kotlin/org/wfanet/consentsignaling:__subpackages__",
    "//src/test/kotlin/org/wfanet/consentsignaling:__subpackages__",
])

kt_jvm_library(
    name = "signage",
    srcs = glob(["*.kt"]),
    deps = [
        "//src/main/kotlin/org/wfanet/consentsignaling/crypto/keys",
        "//src/main/proto/wfa/measurement/api/v2alpha:certificate_java_proto",
        "//src/main/proto/wfa/measurement/api/v2alpha:crypto_java_proto",
        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/crypto:security_provider",
    ],
)
