load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_library")

package(default_visibility = ["//visibility:public"])

kt_jvm_library(
    name = "client",
    srcs = glob(["**/*.kt"]),
    deps = [
        "//src/main/kotlin/org/wfanet/measurement/consent/crypto:hash",
        "//src/main/kotlin/org/wfanet/measurement/consent/crypto:signatures",
        "//src/main/kotlin/org/wfanet/measurement/consent/crypto/hybridencryption",
        "//src/main/proto/wfa/measurement/api/v2alpha:certificate_java_proto",
        "//src/main/proto/wfa/measurement/api/v2alpha:crypto_java_proto",
        "//src/main/proto/wfa/measurement/api/v2alpha:requisition_java_proto",
        "//src/main/proto/wfa/measurement/api/v2alpha:requisition_spec_java_proto",
        "@wfa_common_jvm//imports/java/org/conscrypt",
    ],
)
