load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_library")

package(default_visibility = ["//src/main/kotlin/org/wfanet/measurement/consent"])

kt_jvm_library(
    name = "signatures",
    srcs = ["Signatures.kt"],
    deps = [
        "//src/main/kotlin/org/wfanet/measurement/consent/crypto/exception",
        "//src/main/proto/wfa/measurement/api/v2alpha:crypto_kt_jvm_proto",
        "@wfa_common_jvm//imports/java/com/google/protobuf",
        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/crypto:security_provider",
    ],
)

kt_jvm_library(
    name = "hashing",
    srcs = ["Hashing.kt"],
    deps = ["@wfa_common_jvm//imports/java/com/google/protobuf"],
)

kt_jvm_library(
    name = "utils",
    srcs = ["Utils.kt"],
    deps = [
        "//src/main/kotlin/org/wfanet/measurement/consent/crypto:signatures",
        "//src/main/kotlin/org/wfanet/measurement/consent/crypto/hybridencryption",
        "//src/main/kotlin/org/wfanet/measurement/consent/crypto/keystore",
        "//src/main/proto/wfa/measurement/api/v2alpha:crypto_kt_jvm_proto",
        "@wfa_common_jvm//imports/java/com/google/protobuf",
    ],
)
