load("@wfa_common_jvm//build/openssl:defs.bzl", "generate_root_certificate", "generate_user_certificate")
load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_library")

package(
    default_testonly = True,
    default_visibility = [
        "//src/main/kotlin/org/wfanet/measurement/consent:__subpackages__",
        "//src/test/kotlin/org/wfanet/measurement/consent:__subpackages__",
    ],
)

generate_root_certificate(
    name = "mc_1_root",
    common_name = "Some MC 1",
    hostname = "some-mc-1.example.com",
    org = "Some MC 1",
)

generate_user_certificate(
    name = "mc_1",
    common_name = "Some MC 1",
    hostnames = ["some-mc-1.example.com"],
    org = "Some MC 1",
    root_certificate = ":mc_1_root.pem",
    root_key = ":mc_1_root.key",
)

generate_root_certificate(
    name = "edp_1_root",
    common_name = "Some EDP 1",
    hostname = "some-edp-1.example.com",
    newkey = "rsa:4096",
    org = "Some EDP 1",
    pkeyopts = None,
    sigopts = ["rsa_padding_mode:pss"],
)

generate_user_certificate(
    name = "edp_1",
    common_name = "Some EDP 1",
    hostnames = ["some-edp-1.example.com"],
    org = "Some EDP 1",
    root_certificate = ":edp_1_root.pem",
    root_key = ":edp_1_root.key",
)

generate_root_certificate(
    name = "aggregator_root",
    common_name = "The aggregator",
    hostname = "duchy-aggregator.example.com",
    org = "The Aggregator",
)

generate_user_certificate(
    name = "aggregator",
    common_name = "The aggregator",
    hostnames = ["duchy-aggregator.example.com"],
    org = "The Aggregator",
    root_certificate = ":aggregator_root.pem",
    root_key = ":aggregator_root.key",
)

generate_root_certificate(
    name = "non_aggregator_1_root",
    common_name = "A Duchy 1",
    hostname = "some-duchy-1.example.com",
    org = "A Duchy 1",
)

generate_user_certificate(
    name = "non_aggregator_1",
    common_name = "A Duchy 1",
    hostnames = ["some-duchy-1.example.com"],
    org = "A Duchy 1",
    root_certificate = ":non_aggregator_1_root.pem",
    root_key = ":non_aggregator_1_root.key",
)

generate_root_certificate(
    name = "non_aggregator_2_root",
    common_name = "A Duchy 2",
    hostname = "some-duchy-2.example.com",
    org = "A Duchy 2",
)

generate_user_certificate(
    name = "non_aggregator_2",
    common_name = "A Duchy 2",
    hostnames = ["some-duchy-2.example.com"],
    org = "A Duchy 2",
    root_certificate = ":non_aggregator_2_root.pem",
    root_key = ":non_aggregator_2_root.key",
)

filegroup(
    name = "mc_certs",
    srcs = [
        ":mc_1.key",
        ":mc_1.pem",
        ":mc_1_root.pem",
    ],
)

filegroup(
    name = "edp_certs",
    srcs = [
        ":edp_1.key",
        ":edp_1.pem",
        ":edp_1_root.pem",
    ],
)

filegroup(
    name = "duchy_certs",
    srcs = [
        ":aggregator.key",
        ":aggregator.pem",
        ":aggregator_root.pem",
        ":non_aggregator_1.key",
        ":non_aggregator_1.pem",
        ":non_aggregator_1_root.pem",
    ],
)

kt_jvm_library(
    name = "testing",
    srcs = glob(["*.kt"]),
    data = [
        ":duchy_certs",
        ":edp_certs",
        ":mc_certs",
        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/crypto/testing/testdata:static_certs",
    ],
    deps = [
        "@wfa_common_jvm//imports/java/org/junit",
        "@wfa_common_jvm//imports/kotlin/kotlin/test",
        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/crypto:pem_io",
        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/crypto:security_provider",
        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/crypto:signatures",
        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/crypto/testing",
    ],
)
