load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_test")

kt_jvm_test(
    name = "DuchyClientTest",
    srcs = ["DuchyClientTest.kt"],
    test_class = "org.wfanet.consentsignaling.client.duchy.DuchyClientTest",
    deps = [
        "//src/main/kotlin/org/wfanet/consentsignaling/client",
        "//src/main/kotlin/org/wfanet/consentsignaling/crypto/hybridencryption:hybrid_encryption",
        "//src/main/kotlin/org/wfanet/consentsignaling/crypto/keys",
        "//src/main/kotlin/org/wfanet/consentsignaling/crypto/signage",
        "//src/main/proto/wfa/measurement/api/v2alpha:certificate_java_proto",
        "//src/main/proto/wfa/measurement/api/v2alpha:measurement_spec_java_proto",
        "@wfa_measurement_system//imports/java/org/junit",
        "@wfa_measurement_system//imports/kotlin/kotlin/test",
        "@wfa_measurement_system//src/main/proto/wfa/measurement/system/v1alpha:computation_java_proto",
        "@wfa_measurement_system//src/main/proto/wfa/measurement/system/v1alpha:requisition_java_proto",
    ],
)
