load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_test")

kt_jvm_test(
    name = "FakeHybridCryptorTest",
    srcs = ["FakeHybridCryptorTest.kt"],
    test_class = "org.wfanet.consentsignaling.crypto.hybridencryption.FakeHybridCryptorTest",
    deps = [
        "//imports/java/org/mockito",
        "//src/main/kotlin/org/wfanet/consentsignaling/crypto/hybridencryption:hybrid_encryption",
        "//src/main/kotlin/org/wfanet/consentsignaling/crypto/hybridencryption/testing",
        "@wfa_measurement_system//imports/java/com/google/common/truth",
        "@wfa_measurement_system//imports/java/com/google/common/truth/extensions/proto",
        "@wfa_measurement_system//imports/java/org/junit",
        "@wfa_measurement_system//imports/kotlin/kotlin/test",
    ],
)
