load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_test")

kt_jvm_test(
    name = "FakeHybridCryptorTest",
    srcs = ["FakeHybridCryptorTest.kt"],
    test_class = "org.wfanet.consentsignaling.crypto.hybridencryption.FakeHybridCryptorTest",
    deps = [
        "//src/main/kotlin/org/wfanet/consentsignaling/crypto/hybridencryption",
        "//src/main/kotlin/org/wfanet/consentsignaling/crypto/hybridencryption/testing",
        "@wfa_common_jvm//imports/java/com/google/common/truth",
        "@wfa_common_jvm//imports/java/com/google/common/truth/extensions/proto",
        "@wfa_common_jvm//imports/java/org/junit",
        "@wfa_common_jvm//imports/java/org/mockito",
        "@wfa_common_jvm//imports/kotlin/kotlin/test",
    ],
)
