load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_test")

kt_jvm_test(
    name = "FakeSignerTest",
    srcs = ["FakeSignerTest.kt"],
    test_class = "org.wfanet.consentsignaling.crypto.signage.FakeSignerTest",
    deps = [
        "//imports/java/org/mockito",
        "//src/main/kotlin/org/wfanet/consentsignaling/crypto/signage",
        "//src/main/kotlin/org/wfanet/consentsignaling/crypto/signage/testing",
        "@wfa_measurement_system//imports/java/com/google/common/truth",
        "@wfa_measurement_system//imports/java/com/google/common/truth/extensions/proto",
        "@wfa_measurement_system//imports/java/org/junit",
        "@wfa_measurement_system//imports/kotlin/kotlin/test",
    ],
)
