load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_test")

kt_jvm_test(
    name = "DuchyClientTest",
    srcs = ["DuchyClientTest.kt"],
    test_class = "org.wfanet.measurement.consent.client.DuchyClientTest",
    deps = [
        "//src/main/kotlin/org/wfanet/measurement/consent/client",
        "//src/main/kotlin/org/wfanet/measurement/consent/crypto/hybridencryption",
        "//src/main/kotlin/org/wfanet/measurement/consent/crypto/keys",
        "//src/main/kotlin/org/wfanet/measurement/consent/crypto:signatures",
        "//src/main/kotlin/org/wfanet/measurement/consent/testing",
        "//src/main/proto/wfa/measurement/api/v2alpha:certificate_java_proto",
        "//src/main/proto/wfa/measurement/api/v2alpha:measurement_spec_java_proto",
        "//src/main/proto/wfa/measurement/api/v2alpha:requisition_java_proto",
        "@wfa_common_jvm//imports/java/org/junit",
        "@wfa_common_jvm//imports/kotlin/kotlin/test",
        "@wfa_measurement_system//src/main/proto/wfa/measurement/system/v1alpha:computation_java_proto",
        "@wfa_measurement_system//src/main/proto/wfa/measurement/system/v1alpha:requisition_java_proto",
    ],
)
