load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_test")

kt_jvm_test(
    name = "SignaturesTest",
    srcs = ["SignaturesTest.kt"],
    test_class = "org.wfanet.measurement.consent.crypto.SignaturesTest",
    deps = [
        "//src/main/kotlin/org/wfanet/measurement/consent/crypto:signatures",
        "//src/main/kotlin/org/wfanet/measurement/consent/testing",
        "@wfa_common_jvm//imports/java/com/google/common/truth",
        "@wfa_common_jvm//imports/java/org/junit",
        "@wfa_common_jvm//imports/kotlin/kotlin/test",
        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/crypto:security_provider",
        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/crypto/testing",
    ],
)

kt_jvm_test(
    name = "HashingTest",
    srcs = ["HashingTest.kt"],
    test_class = "org.wfanet.measurement.consent.crypto.HashingTest",
    deps = [
        "//src/main/kotlin/org/wfanet/measurement/consent/crypto:hashing",
        "@wfa_common_jvm//imports/java/com/google/common/truth",
        "@wfa_common_jvm//imports/java/org/junit",
        "@wfa_common_jvm//imports/kotlin/kotlin/test",
    ],
)

kt_jvm_test(
    name = "UtilsTest",
    srcs = ["UtilsTest.kt"],
    test_class = "org.wfanet.measurement.consent.crypto.UtilsTest",
    deps = [
        "//src/main/kotlin/org/wfanet/measurement/consent/crypto:utils",
        "//src/main/kotlin/org/wfanet/measurement/consent/crypto/keystore/testing",
        "//src/main/kotlin/org/wfanet/measurement/consent/testing",
        "//src/main/proto/wfa/measurement/api/v2alpha:certificate_java_proto",
        "//src/main/proto/wfa/measurement/api/v2alpha:crypto_java_proto",
        "//src/main/proto/wfa/measurement/api/v2alpha:measurement_java_proto",
        "//src/main/proto/wfa/measurement/api/v2alpha:measurement_spec_java_proto",
        "@wfa_common_jvm//imports/java/com/google/common/truth",
        "@wfa_common_jvm//imports/java/org/junit",
        "@wfa_common_jvm//imports/kotlin/kotlin/test",
    ],
)
