load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_test")

kt_jvm_test(
    name = "DataProviderExchangeStepSignaturesTest",
    srcs = ["DataProviderExchangeStepSignaturesTest.kt"],
    test_class = "org.wfanet.measurement.consent.dataprovider.DataProviderExchangeStepSignaturesTest",
    deps = [
        "//src/main/kotlin/org/wfanet/measurement/consent/client/dataprovider",
        "//src/main/kotlin/org/wfanet/measurement/consent/testing",
    ],
)
