load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_test")

kt_jvm_test(
    name = "MeasurementConsumerExchangeStepSignaturesTest",
    srcs = ["MeasurementConsumerExchangeStepSignaturesTest.kt"],
    test_class = "org.wfanet.measurement.consent.measurementconsumer.MeasurementConsumerExchangeStepSignaturesTest",
    deps = [
        "//src/main/kotlin/org/wfanet/measurement/consent/client/measurementconsumer",
        "//src/main/kotlin/org/wfanet/measurement/consent/testing",
    ],
)
