load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_library")

package(default_visibility = [
    "//src/main/kotlin/org/wfanet/measurement/consent/client:__subpackages__",
    "//src/test/kotlin/org/wfanet/measurement/consent/client:__subpackages__",
])

kt_jvm_library(
    name = "key_handles",
    srcs = ["KeyHandles.kt"],
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/proto/wfa/measurement/api/v2alpha:crypto_kt_jvm_proto",
        "@wfa_common_jvm//imports/kotlin/com/google/protobuf/kotlin",
        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/crypto:key_storage",
        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/crypto/tink",
    ],
)

kt_jvm_library(
    name = "signing",
    srcs = ["Signing.kt"],
    deps = [
        "//src/main/proto/wfa/measurement/api/v2alpha:crypto_kt_jvm_proto",
        "@wfa_common_jvm//imports/java/com/google/protobuf",
        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common",
        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/crypto:signing_key_storage",
    ],
)

kt_jvm_library(
    name = "verification_exception",
    srcs = ["VerificationException.kt"],
    visibility = ["//visibility:public"],
)
