load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_library")

package(default_visibility = ["//visibility:public"])

kt_jvm_library(
    name = "dataprovider",
    srcs = ["DataProviderClient.kt"],
    deps = [
        "//src/main/kotlin/org/wfanet/measurement/consent/crypto:hashing",
        "//src/main/kotlin/org/wfanet/measurement/consent/crypto:signatures",
        "//src/main/kotlin/org/wfanet/measurement/consent/crypto:utils",
        "//src/main/kotlin/org/wfanet/measurement/consent/crypto/hybridencryption",
        "//src/main/proto/wfa/measurement/api/v2alpha:crypto_kt_jvm_proto",
        "//src/main/proto/wfa/measurement/api/v2alpha:measurement_spec_kt_jvm_proto",
        "//src/main/proto/wfa/measurement/api/v2alpha:requisition_kt_jvm_proto",
        "//src/main/proto/wfa/measurement/api/v2alpha:requisition_spec_kt_jvm_proto",
        "@wfa_common_jvm//imports/java/org/conscrypt",
    ],
)
