load("@wfa_common_jvm//build/rules_kotlin:defs.bzl", "kt_jvm_library")

package(default_visibility = ["//visibility:public"])

kt_jvm_library(
    name = "duchy",
    srcs = ["DuchyClient.kt"],
    deps = [
        "//src/main/kotlin/org/wfanet/measurement/consent/client/common:key_handles",
        "//src/main/kotlin/org/wfanet/measurement/consent/client/common:signing",
        "//src/main/kotlin/org/wfanet/measurement/consent/client/common:verify_signed_data",
        "//src/main/proto/wfa/measurement/api/v2alpha:certificate_kt_jvm_proto",
        "//src/main/proto/wfa/measurement/api/v2alpha:crypto_kt_jvm_proto",
        "//src/main/proto/wfa/measurement/api/v2alpha:measurement_kt_jvm_proto",
        "//src/main/proto/wfa/measurement/api/v2alpha:measurement_spec_kt_jvm_proto",
        "//src/main/proto/wfa/measurement/api/v2alpha:requisition_kt_jvm_proto",
        "//src/main/proto/wfa/measurement/api/v2alpha:requisition_spec_kt_jvm_proto",
        "@wfa_common_jvm//imports/java/com/google/protobuf",
        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/crypto:hashing",
        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/crypto:signatures",
        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/crypto:signing_key_storage",
    ],
)
